--- a/style.css
+++ b/style.css
@@ -2089,6 +2089,12 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	.financials-header-text{
 		font-size:20px;
 	}
+	.bold-stat-extra-large{
+		font-size:100px;
+	}
+	.bold-stat-large{
+		font-size:100px;
+	}
 	
 	/* Mobile Row Margin Offsets */
 	.voffset-md-xs{
