--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*-----------------------------------------------------------------------------------
-	    ODI Annual report draft MOBILE v4
+	    ODI Annual report draft MOBILE v5
         Built with Blocs
 -----------------------------------------------------------------------------------*/
  
@@ -24,18 +24,6 @@ a:hover{text-decoration: none; cursor:pointer;}
 -------------------------------------------------------------- */
 
 @font-face {
-	font-family:'OTS-derive2-font';
-	src: url('./fonts/OTS-derive2-font/3ADA70_0_0.woff2');
-	src: url('./fonts/OTS-derive2-font/3ADA70_0_0.woff2') format('woff2'),
-	url('./fonts/OTS-derive2-font/3ADA70_0_0.woff') format('woff'),
-	url('./fonts/OTS-derive2-font/3ADA70_0_0.eot?#iefix') format('embedded-opentype'),
-	url('./fonts/OTS-derive2-font/3ADA70_0_0.ttf') format('truetype'),
-	url('./fonts/OTS-derive2-font/3ADA70_0_0.svg#OTS-derive2-font') format('svg');
-	font-weight: normal;
-	font-style: normal;
-}
-
-@font-face {
 	font-family:'OTS-derive3-font';
 	src: url('./fonts/OTS-derive3-font/3ADA72_0_0.woff2');
 	src: url('./fonts/OTS-derive3-font/3ADA72_0_0.woff2') format('woff2'),
@@ -43,6 +31,18 @@ a:hover{text-decoration: none; cursor:pointer;}
 	url('./fonts/OTS-derive3-font/3ADA72_0_0.eot?#iefix') format('embedded-opentype'),
 	url('./fonts/OTS-derive3-font/3ADA72_0_0.ttf') format('truetype'),
 	url('./fonts/OTS-derive3-font/3ADA72_0_0.svg#OTS-derive3-font') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+@font-face {
+	font-family:'OTS-derive2-font';
+	src: url('./fonts/OTS-derive2-font/3ADA70_0_0.woff2');
+	src: url('./fonts/OTS-derive2-font/3ADA70_0_0.woff2') format('woff2'),
+	url('./fonts/OTS-derive2-font/3ADA70_0_0.woff') format('woff'),
+	url('./fonts/OTS-derive2-font/3ADA70_0_0.eot?#iefix') format('embedded-opentype'),
+	url('./fonts/OTS-derive2-font/3ADA70_0_0.ttf') format('truetype'),
+	url('./fonts/OTS-derive2-font/3ADA70_0_0.svg#OTS-derive2-font') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -256,6 +256,9 @@ a:hover{text-decoration: none; cursor:pointer;}
 
 /* Row Margin Offsets */
 
+.voffset{
+	margin-top:30px;
+}
 .voffset-lg{
 	margin-top:80px;
 }
@@ -350,6 +353,15 @@ button{
 
 
 
+/* = Lists
+-------------------------------------------------------------- */
+.list-horizontal-layout li{
+	float:left;
+	margin:0 10px;
+}
+.list-sp-md li:last-child,.list-sp-lg li:last-child,.list-sp-xl li:last-child{
+	padding-bottom:0;
+}
 
 .card-sq, .card-sq .card-header, .card-sq .card-footer{
 	border-radius:0;
@@ -747,7 +759,7 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	font-size:24px;
 	line-height:30px;
 	margin-top:0px;
-	font-weight:bold;
+	font-weight:normal;
 }
 .intro-ceo{
 	padding:30px 30px 30px 30px;
@@ -898,8 +910,9 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	border-width:0px 2px 0px 0px;
 }
 .h1-14-style{
-	text-indent:-30px;
+	text-indent:0px;
 	line-height:230px;
+	letter-spacing:-8px;
 }
 .h6-margin-bottom{
 	margin-top:-30px;
@@ -1111,7 +1124,7 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 }
 .stat-header{
 	font-family:"OTS-derive3-font";
-	font-size:75px;
+	font-size:60px;
 	text-transform:uppercase;
 }
 .stat-title-{
@@ -1144,10 +1157,10 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	font-weight:bold;
 }
 .navigation-header{
-	text-transform:none;
-	font-size:30px;
+	text-transform:uppercase;
+	font-size:20px;
 	text-decoration:none;
-	font-weight:bold;
+	font-weight:normal;
 }
 .rsa-bg-type{
 	background-image:url("img/RSA%20typographic.svg");
@@ -1310,7 +1323,7 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	height:150px;
 }
 .row-margin-top{
-	margin-top:450px;
+	margin-top:16px;
 }
 .vision-margin{
 	margin-top:50px;
@@ -1465,11 +1478,43 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	text-indent:-15px;
 }
 .link-style-explore{
-	font-weight:bold;
+	font-weight:normal;
 	text-decoration:underline!important;
 }
 .link-style-explore:hover{
 	color:rgba(255,255,255,0.50)!important;
+}
+.colour-text-dark-blue{
+	;
+}
+.colour-text-grey{
+	color:#D0D3D3!important;
+}
+.padding-logo-summit{
+	background-size:auto auto;
+	padding:20px 20px 20px 20px;
+}
+.img-52-style{
+	height:150px;
+}
+.img-49-style{
+	width:250px;
+}
+.img-margin-right{
+	margin-right:18px;
+	width:220px;
+}
+.img-57-style{
+	width:248px;
+}
+.row-bloc-27-margin-top{
+	margin-top:101px;
+}
+.bloc-23156-margin-top{
+	margin-top:33px;
+}
+.row-85-margin-top{
+	margin-top:13px;
 }
 
 /* = Colour
@@ -1489,6 +1534,9 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .bgc-carnation-pink{
 	background-color:#F79DD3;
 }
+.bgc-platinum{
+	background-color:#E7E7E7;
+}
 .bgc-international-orange{
 	background-color:#FF5800;
 }
@@ -1500,9 +1548,6 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 }
 .bgc-dark-pastel-green{
 	background-color:#00C346;
-}
-.bgc-dodger-blue{
-	background-color:#178BFF;
 }
 .bgc-palatinate-blue{
 	background-color:#2153F4;
@@ -1516,20 +1561,23 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .bgc-caribbean-green{
 	background-color:#1CD3A6;
 }
-.bgc-dodger-blue-2{
+.bgc-dodger-blue{
 	background-color:#11A0FF;
 }
 .bgc-purple-heart{
 	background-color:#722DA5;
 }
-.bgc-platinum{
-	background-color:#E7E7E7;
-}
 .bgc-saffron{
 	background-color:#FBC630;
 }
+.bgc-dark-pastel-green-2{
+	background-color:#0DBC36;
+}
 .bgc-bright-pink{
 	background-color:#E5007B;
+}
+.bgc-dodger-blue-2{
+	background-color:#178BFF;
 }
 
 /* Text colour styles */
@@ -1555,6 +1603,9 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .tc-dark-pastel-green{
 	color:#00C346!important;
 }
+.tc-bright-turquoise{
+	color:#08DDF8!important;
+}
 .tc-purple-heart{
 	color:#722DA5!important;
 }
@@ -1564,14 +1615,14 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .tc-pastel-green{
 	color:#66EF66!important;
 }
+.tc-ultramarine-blue{
+	color:#2C6FF6!important;
+}
 .tc-rose-bonbon{
 	color:#EF3AAB!important;
 }
-.tc-dodger-blue-2{
-	color:#11A0FF!important;
-}
-.tc-bright-turquoise{
-	color:#08DDF8!important;
+.tc-dark-pastel-green-2{
+	color:#0DBC36!important;
 }
 .tc-capri{
 	color:#00C3FF!important;
@@ -1597,23 +1648,23 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .ltc-palatinate-blue:hover{
 	color:#1a42c3!important;
 }
-.ltc-lavender-gray{
-	color:#C6C9C9!important;
-}
-.ltc-lavender-gray:hover{
-	color:#9ea1a1!important;
-}
-.ltc-black{
-	color:#000000!important;
-}
-.ltc-black:hover{
-	color:#000000!important;
-}
 .ltc-dark-pastel-green{
 	color:#00C346!important;
 }
 .ltc-dark-pastel-green:hover{
 	color:#009c38!important;
+}
+.ltc-light-gray{
+	color:#D1D3D3!important;
+}
+.ltc-light-gray:hover{
+	color:#a7a9a9!important;
+}
+.ltc-palatinate-blue-2{
+	color:#2153F4!important;
+}
+.ltc-palatinate-blue-2:hover{
+	color:#1a42c3!important;
 }
 .ltc-bright-turquoise{
 	color:#08DDF8!important;
@@ -1621,23 +1672,11 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .ltc-bright-turquoise:hover{
 	color:#06b1c6!important;
 }
-.ltc-dodger-blue{
-	color:#11A0FF!important;
+.ltc-black{
+	color:#000000!important;
 }
-.ltc-dodger-blue:hover{
-	color:#0e80cc!important;
-}
-.ltc-pear{
-	color:#C0E136!important;
-}
-.ltc-pear:hover{
-	color:#9ab42b!important;
-}
-.ltc-palatinate-blue-2{
-	color:#2153F4!important;
-}
-.ltc-palatinate-blue-2:hover{
-	color:#1a42c3!important;
+.ltc-black:hover{
+	color:#000000!important;
 }
 
 /* Bloc image backgrounds */
@@ -1648,14 +1687,29 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 .bg-49059619306-b34f1e160f-o-20-281-29{
 	background-image:url("img/49059619306_b34f1e160f_o%20%281%29.jpg");
 }
+.bg-DoxBox0819{
+	background-image:url("img/DoxBox0819-1.jpg");
+}
+.bg-IMG-9816-ethics-canvas{
+	background-image:url("img/IMG_9816-ethics-canvas.jpg");
+}
 .bg-49059105103-c2f1f06968-o{
 	background-image:url("img/49059105103_c2f1f06968_o.jpg");
+}
+.bg-membership-20graphic-2x{
+	background-image:url("img/membership%20graphic@2x-1.png");
 }
 .bg-49059622361-b71a5fc1b5-o{
 	background-image:url("img/49059622361_b71a5fc1b5_o.jpg");
 }
+.bg-double-image-RandD{
+	background-image:url("img/double-image-RandD.jpg");
+}
 .bg-double-image-data-trusts{
 	background-image:url("img/double-image-data-trusts.jpg");
+}
+.bg-equity-20manifesto-20RGB-2x{
+	background-image:url("img/equity%20manifesto%20RGB@2x-1.png");
 }
 .bg-49059621536-a8949d263c-o{
 	background-image:url("img/49059621536_a8949d263c_o.jpg");
@@ -1683,6 +1737,15 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 }
 .bg-CABI-Data-Ecosystem-Mapping-workshop-mobile{
 	background-image:url("img/CABI-Data-Ecosystem-Mapping-workshop-mobile.jpg");
+}
+.bg-DoxBox0819{
+	background-image:url("img/DoxBox0819-2.jpg");
+}
+.bg-DoxBox0819{
+	background-image:url("img/DoxBox0819-3.jpg");
+}
+.bg-CABI-Data-Ecosystem-Mapping-workshop-20v2{
+	background-image:url("img/CABI-Data-Ecosystem-Mapping-workshop%20v2.jpg");
 }
 
 
@@ -1856,6 +1919,11 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 		line-height:24px;
 	}
 	
+	/* MD Text Margin Offsets */
+	.mg-clear-md{
+		margin:0;
+	}
+	
 }
 
 @media (max-width: 767px){
@@ -1950,6 +2018,10 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	.mg-md-sm{
 		margin-top:10px;
 		margin-bottom:20px;
+	}
+		.mg-lg-sm{
+		margin-top: 10px;
+		margin-bottom:40px;
 	}
 	
 }
@@ -2268,6 +2340,8 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	.bloc-0-margin-top{
 		margin-top:-25px;
 	}
+	.colour-text-dark-blue{
+	}
 	
 	/* Mobile Row Margin Offsets */
 	.voffset-xs{
@@ -2278,7 +2352,11 @@ h1,h2,h3,h4,h5,h6,p,label,.btn,a{
 	}
 	
 	/* Mobile Text Margin Offsets */
-	.mg-clear-xs{
+	.mg-lg-xs{
+		margin-top: 10px;
+		margin-bottom:40px;
+	}
+		.mg-clear-xs{
 		margin:0;
 	}
 	
